# Elabel

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
.VSCodeCounter/2025-03-27_18-54-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Squareline UI/: SquareLine_Project.sll  SquareLine_Project.spj
Squareline UI/assets/: ui_font_Chinese_20.fcfg  ui_font_Chinese_28.fcfg
Squareline UI/code/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Squareline UI/code/screens/: ui_ActiveScreen.c  ui_FocusScreen.c  ui_HalfmindScreen.c  ui_HostActiveScreen.c  ui_OTAScreen.c  ui_OperatingScreen.c  ui_ShutdownScreen.c  ui_TaskScreen.c  ui_UpdateScreen.c
components/Codec/: CMakeLists.txt  codec.cpp
components/Codec/include/: codec.hpp  codec_utils.hpp
components/control_driver/: CMakeLists.txt  LED.cpp  button.cpp  buzzer.cpp  control_driver.c  control_driver.cpp  encoder.cpp
components/control_driver/include/: LED.hpp  button.hpp  buzzer.hpp  callback.hpp  control_driver.h  control_driver.hpp  encoder.hpp  ws2812_control.h
components/http/: CMakeLists.txt  http.c
components/http/include/: http.h  http_recieve.h  http_send.h
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: bitmap.h  disp_spi.c  ssd1680.c  ssd1680.h
components/m_esp_now/: CMakeLists.txt  Esp_now_client.cpp  Esp_now_host.cpp  Esp_now_slave.cpp  VoicePacketManager.cpp  esp_now_remind.cpp  m_esp_now.c
components/m_esp_now/include/: MacAdrees.hpp  VoicePacketManager.hpp  esp_now_client.hpp  esp_now_host.hpp  esp_now_remind.hpp  esp_now_slave.hpp  m_esp_now.h  m_esp_now_recieve.h
components/m_http/: CMakeLists.txt  http.c
components/m_http/include/: http.h  http_recieve.h  http_send.h
components/m_mqtt/: CMakeLists.txt  m_mqtt.c
components/m_mqtt/include/: m_mqtt.h  mqtt_recieve.h
components/network/: CMakeLists.txt  network.c
components/network/include/: blufi.h  network.h
components/ota/: CMakeLists.txt  ota.c
components/ota/include/: ota.h
components/ui/: CMakeLists.txt  filelist.txt  template.txt  todo.txt  ui.c  ui.h
components/ui/fonts/: ui_font_Chinese_20.c
components/ui/images/: ui_img_1460800525.c  ui_img_1747580854.c  ui_img_1859145046.c  ui_img_accept_n_png.c  ui_img_accept_y_png.c  ui_img_activate1_png.c  ui_img_activate2_png.c  ui_img_activate3_png.c  ui_img_battery_png.c  ui_img_cancel_n_png.c  ui_img_cancel_y_png.c  ui_img_connectwifi_png.c  ui_img_disconnectwifi_png.c  ui_img_erweima_png.c  ui_img_finish_n_png.c  ui_img_finish_y_png.c  ui_img_halfmind_png.c  ui_img_hostactive_png.c  ui_img_player_png.c  ui_img_recordagain_png.c  ui_img_retry_n_png.c  ui_img_retry_y_png.c  ui_img_scollarbar_png.c  ui_img_seeyounexttime_png.c  ui_img_speach_png.c  ui_img_start_n_png.c  ui_img_start_y_png.c  ui_img_tips1_png.c  ui_img_tips2_png.c  ui_img_tips3_png.c  ui_img_warning_amber_png.c
components/ui/screens/: ui_ActivateScreen.c  ui_ActiveScreen.c  ui_BindScreen.c  ui_FocusScreen.c  ui_HalfmindScreen.c  ui_HostActiveScreen.c  ui_OTAScreen.c  ui_OperatingScreen.c  ui_ShutdownScreen.c  ui_SlaveActiveScreen.c  ui_TaskScreen.c  ui_UpdateScreen.c
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/battery_manager/: battery_manager.cpp  battery_manager.hpp
main/elabel_state_machine/: ActiveState.cpp  ActiveState.hpp  ChoosingTaskState.cpp  ChoosingTaskState.hpp  ElabelController.cpp  ElabelController.hpp  FocusTaskState.cpp  FocusTaskState.hpp  HostActiveState.cpp  HostActiveState.hpp  InitState.cpp  InitState.hpp  NoWifiState.cpp  NoWifiState.hpp  OTAState.cpp  OTAState.hpp  OperatingRecorderState.cpp  OperatingRecorderState.hpp  OperatingTaskState.cpp  OperatingTaskState.hpp  OperatingTimerState.cpp  OperatingTimerState.hpp  SlaveActiveState.cpp  SlaveActiveState.hpp  StateMachine.hpp
main/global_message/: Firmware_define.h  global_draw.c  global_draw.h  global_message.c  global_message.h  global_nvs.c  global_nvs.h  global_time.c  global_time.h
main/spiffs_data/: Pcm2hpp.py  bell.pcm  ding.pcm  open.pcm  speech_guidance.pcm  stop.pcm
main/spiffs_data/include/: music.hpp
